--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "dev":"nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "gitignore": "^0.7.0",
+    "mongoose": "^9.1.6",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.11"
   }
 }
